<resources>
    <string name="app_name">Exercise3</string>
    <string name="lblInsuranceTitle">Insurance Premium Calculator</string>
    <string name="lblAge">Age :</string>
    <string name="lblGender">Gender :</string>
    <string name="lblSmoker">Smoker :</string>
    <string name="lblTotal">Total Premium : </string>
    <string name="radMale">Male</string>
    <string name="radFemale">Female</string>
    <string name="chkYes">Yes</string>
    <string name="btnCalculate">Calculate</string>
    <string name="btnReset">Reset</string>

    <string-array name="ageRange">
        <item>Less than 17</item>
        <item>17 - 25</item>
        <item>26 - 30</item>
        <item>31 - 40</item>
        <item>41 - 55</item>
        <item>More than 55</item>
    </string-array>
</resources>
