<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chkYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkYes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/lblSmoker"
                app:layout_constraintTop_toTopOf="@+id/lblSmoker" />

            <TextView
                android:id="@+id/lblTotalResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/lblTotal"
                app:layout_constraintTop_toTopOf="@+id/lblTotal" />

            <TextView
                android:id="@+id/lblSmoker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/lblSmoker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.162"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblGender" />

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/btnCalculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.213"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblTotal" />

            <TextView
                android:id="@+id/lblTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/lblTotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblSmoker" />

            <TextView
                android:id="@+id/lblGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/lblGender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.161"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblAge" />

            <Spinner
                android:id="@+id/spinnerAge"
                android:layout_width="160dp"
                android:layout_height="23dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.422"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lblAge" />

            <RadioGroup
                android:id="@+id/radGroup"
                android:layout_width="156dp"
                android:layout_height="30dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/lblGender"
                app:layout_constraintTop_toTopOf="@+id/lblGender">

                <RadioButton
                    android:id="@+id/radMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radMale" />

                <RadioButton
                    android:id="@+id/radFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radFemale" />
            </RadioGroup>

            <TextView
                android:id="@+id/lblAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="108dp"
                android:text="@string/lblAge"
                app:layout_constraintEnd_toStartOf="@+id/spinnerAge"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/btnReset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toEndOf="@+id/btnCalculate"
                app:layout_constraintTop_toBottomOf="@+id/lblTotalResult" />

            <TextView
                android:id="@+id/lblInsurancePremiumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/lblInsuranceTitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>